--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
             const DEFAULT_GRADIENT_BACKGROUND = 'linear-gradient(145deg, #4A00B0, #004080, #300060)'; // A default gradient for clarity
 
             // State variables for ID card details
-            const [agentName, setAgentName] = useState('HAMMOND');
+            const [agentName, setAgentName] = useState('Player');
             const [rank, setRank] = useState('PARANORMAL INVESTIGATOR');
             const [prestige, setPrestige] = useState(1);
-            const [actualLevel, setActualLevel] = useState(97);
+            const [actualLevel, setActualLevel] = useState(01);
 
             // New states for the dynamic input fields
             const [selectedCategory, setSelectedCategory] = useState('equipment'); // 'equipment', 'specialization', 'teamName'
