--- a/index.html
+++ b/index.html
@@ -133,14 +133,15 @@
             const DEFAULT_PROFILE_IMAGE = 'https://placehold.co/250x350/000000/FFFFFF?text=Upload+Image';
             // Default background style for the ID card
             const DEFAULT_BACKGROUND_STYLE = {
+                // Using a simpler, more html2canvas-friendly background pattern as default
+                // This is a small SVG data URL that creates a subtle grid/dot pattern
                 backgroundImage: 'url("data:image/svg+xml,%3Csvg width=\'6\' height=\'6\' viewBox=\'0 0 6 6\' xmlns=\'http://www.w3.org/2000/svg\'%3E%3Cg fill=\'%239C92AC\' fill-opacity=\'0.1\' fill-rule=\'evenodd\'%3E%3Cpath d=\'M5 0h1L0 6V5zM6 5v1H5z\'/%3E%3C/g%3E%3C/svg%3E")',
-                backgroundSize: 'cover',
-                backgroundPosition: 'center',
-                backgroundRepeat: 'no-repeat',
-                backgroundColor: 'transparent', // Ensure no background color interferes
-                boxShadow: 'inset 0 0 50px rgba(0,0,0,0.5)'
+                backgroundSize: 'cover', // Cover the entire area
+                backgroundPosition: 'center', // Center the background
+                backgroundRepeat: 'no-repeat', // Don't repeat the background image
+                backgroundColor: '#2D3748', // Fallback solid color for the background
+                boxShadow: 'inset 0 0 50px rgba(0,0,0,0.5)' // Inner shadow for depth
             };
-            const DEFAULT_GRADIENT_BACKGROUND = 'linear-gradient(145deg, #4A00B0, #004080, #300060)'; // A default gradient for clarity
 
             // State variables for ID card details
             const [agentName, setAgentName] = useState('Player');
@@ -224,7 +225,7 @@
                                 backgroundSize: 'cover',
                                 backgroundPosition: 'center',
                                 backgroundRepeat: 'no-repeat',
-                                backgroundColor: 'transparent',
+                                backgroundColor: 'transparent', // Ensure no background color interferes
                                 boxShadow: 'inset 0 0 50px rgba(0,0,0,0.5)'
                             });
                         } else {
@@ -240,14 +241,7 @@
 
             // Function to clear the background image and revert to default gradient
             const clearBackground = () => {
-                setBackgroundStyle({
-                    backgroundImage: DEFAULT_BACKGROUND_STYLE.backgroundImage,
-                    backgroundSize: DEFAULT_BACKGROUND_STYLE.backgroundSize,
-                    backgroundPosition: DEFAULT_BACKGROUND_STYLE.backgroundPosition,
-                    backgroundRepeat: DEFAULT_BACKGROUND_STYLE.backgroundRepeat,
-                    backgroundColor: DEFAULT_BACKGROUND_STYLE.backgroundColor,
-                    boxShadow: DEFAULT_BACKGROUND_STYLE.boxShadow
-                });
+                setBackgroundStyle(DEFAULT_BACKGROUND_STYLE); // Revert to the default background style
                 if (backgroundFileInputRef.current) {
                     backgroundFileInputRef.current.value = ''; // Clear the selected file
                 }
@@ -261,7 +255,7 @@
                     .replace(/<!DOCTYPE[^>]*>/g, '')
                     .replace(/<metadata>[\s\S]*?<\/metadata>/g, '');
 
-                // Ensure the main <svg> tag has appropriate sizing and aspect ratio
+                // Ensure the main <svg> tag has appropriate sizing and and aspect ratio
                 // Also, attempt to change fill to "currentColor" so it respects parent text color
                 cleanedSvg = cleanedSvg.replace(/<svg([^>]*)>/, (match, p1) => {
                     let newAttrs = p1;
@@ -605,7 +599,7 @@
                     <div className="flex-shrink-0 mx-auto w-full flex justify-center">
                         <div
                             ref={idCardRef}
-                            className="relative bg-gradient-to-br from-purple-900 via-blue-900 to-indigo-900 rounded-xl shadow-2xl overflow-hidden border-2"
+                            className="relative rounded-xl shadow-2xl overflow-hidden border-2"
                             style={{
                                 width: 'min(100%, 1000px)', /* Responsive width, max 1000px */
                                 minWidth: '500px', /* Minimum width for visibility */
@@ -621,24 +615,32 @@
                                 </h2>
                             </div>
 
-                            {/* Main Content Area - Now using absolute positioning for sub-sections */}
-                            <div className="absolute top-[70px] left-0 right-0 bottom-0">
-                                {/* Profile Image Container */}
-                                <div className="absolute w-[250px] h-[350px] rounded-xl overflow-hidden border-4 border-gray-400 bg-gray-600 shadow-lg flex-shrink-0"
-                                    style={{ left: '20px', top: '20px', borderRadius: '15px' }}>
-                                    <img
-                                        src={profileImage}
-                                        alt="Profile"
-                                        className="w-full h-full object-cover"
-                                        onError={(e) => {
-                                            e.target.onerror = null;
-                                            e.target.src = DEFAULT_PROFILE_IMAGE; // Use default placeholder on error
-                                        }}
-                                    />
+                            {/* Main Content Area - Now using CSS Grid for layout */}
+                            <div className="absolute top-[70px] left-0 right-0 bottom-0 grid"
+                                style={{
+                                    gridTemplateColumns: '250px 1.5fr 224px', /* Increased space for text, fixed profile, fixed badges */
+                                    padding: '32px', /* Equivalent to p-8 */
+                                    gap: '32px' /* Equivalent to gap-8 */
+                                }}>
+                                {/* Column 1: Profile Image */}
+                                <div className="flex flex-col items-start justify-start"> {/* Align to top-left of its grid cell */}
+                                    {/* Profile Image Container */}
+                                    <div className="w-[250px] h-[350px] rounded-xl overflow-hidden border-4 border-gray-400 bg-gray-600 shadow-lg"
+                                        style={{ borderRadius: '15px' }}>
+                                        <img
+                                            src={profileImage}
+                                            alt="Profile"
+                                            className="w-full h-full object-cover"
+                                            onError={(e) => {
+                                                e.target.onerror = null;
+                                                e.target.src = DEFAULT_PROFILE_IMAGE; // Use default placeholder on error
+                                            }}
+                                        />
+                                    </div>
                                 </div>
 
-                                {/* Name, Level, and Dynamic Text Fields */}
-                                <div className="absolute flex flex-col justify-start items-start h-full pt-5 pl-4" style={{ left: '300px', top: '20px' }}>
+                                {/* Column 2: Name, Level, and Dynamic Text Fields */}
+                                <div className="flex flex-col justify-start items-start"> {/* Align to top-left of its grid cell */}
                                     <p className="text-xl font-bold uppercase mb-1" style={{ color: labelColor }}>NAME</p>
                                     <h3 className="text-6xl font-extrabold uppercase tracking-wide leading-tight" style={{ textShadow: '3px 3px 6px rgba(0,0,0,0.7)', color: accentColor }}>
                                         {agentName}
@@ -649,11 +651,11 @@
                                     </h3>
 
                                     {/* Dynamic section for Preferred Gear, Specialization, or Team Name */}
-                                    <div className="mt-8 space-y-4"> {/* Increased space-y for better vertical separation */}
+                                    <div className="mt-8 space-y-4 w-full"> {/* Increased space-y for better vertical separation */}
                                         {selectedCategory === 'equipment' && (
                                             <p className="flex flex-col items-start"> {/* Use flex-col to stack label and content */}
                                                 <span className="text-xl font-bold uppercase mr-2" style={{ color: labelColor }}>Preferred Gear:</span>
-                                                <span className="text-2xl font-extrabold uppercase tracking-wide leading-tight overflow-x-auto whitespace-nowrap max-w-full" style={{ textShadow: '3px 3px 6px rgba(0,0,0,0.7)', color: accentColor }}>
+                                                <span className="text-2xl font-extrabold uppercase tracking-wide leading-tight w-full" style={{ textShadow: '3px 3px 6px rgba(0,0,0,0.7)', color: accentColor, wordWrap: 'break-word', whiteSpace: 'normal' }}>
                                                     {selectedEquipment.join(', ')}
                                                 </span>
                                             </p>
@@ -661,7 +663,7 @@
                                         {selectedCategory === 'specialization' && (
                                             <p className="flex flex-col items-start"> {/* Use flex-col to stack label and content */}
                                                 <span className="text-xl font-bold uppercase mr-2" style={{ color: labelColor }}>Specialization:</span>
-                                                <span className="text-2xl font-extrabold uppercase tracking-wide leading-tight overflow-x-auto whitespace-nowrap max-w-full" style={{ textShadow: '3px 3px 6px rgba(0,0,0,0.7)', color: accentColor }}>
+                                                <span className="text-2xl font-extrabold uppercase tracking-wide leading-tight w-full" style={{ textShadow: '3px 3px 6px rgba(0,0,0,0.7)', color: accentColor, wordWrap: 'break-word', whiteSpace: 'normal' }}>
                                                     {selectedSpecialization}
                                                 </span>
                                             </p>
@@ -669,7 +671,7 @@
                                         {selectedCategory === 'teamName' && (
                                             <p className="flex flex-col items-start"> {/* Use flex-col to stack label and content */}
                                                 <span className="text-xl font-bold uppercase mr-2" style={{ color: labelColor }}>Team Name:</span>
-                                                <span className="text-2xl font-extrabold uppercase tracking-wide leading-tight overflow-x-auto whitespace-nowrap max-w-full" style={{ textShadow: '3px 3px 6px rgba(0,0,0,0.7)', color: accentColor }}>
+                                                <span className="text-2xl font-extrabold uppercase tracking-wide leading-tight w-full" style={{ textShadow: '3px 3px 6px rgba(0,0,0,0.7)', color: accentColor, wordWrap: 'break-word', whiteSpace: 'normal' }}>
                                                     {teamNameInput}
                                                 </span>
                                             </p>
@@ -677,10 +679,10 @@
                                     </div>
                                 </div>
 
-                                {/* Badges */}
-                                <div className="absolute flex flex-row items-center justify-start space-x-8" style={{ right: '80px', top: '150px' }}>
+                                {/* Column 3: Badges */}
+                                <div className="flex flex-row items-center justify-center gap-8"> {/* Changed to flex-row for horizontal stacking, centered */}
                                     {/* Badge 1 */}
-                                    <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl aspect-square overflow-hidden">
+                                    <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl aspect-square overflow-hidden" style={{ backgroundColor: 'rgba(255,255,255,0.1)' }}>
                                         {customBadge1DataUrl ? (
                                             customBadge1DataUrl.startsWith('data:image/svg+xml') ? (
                                                 <div className="w-full h-full text-white p-4" dangerouslySetInnerHTML={{ __html: customBadge1DataUrl }} />
@@ -688,12 +690,12 @@
                                                 <img src={customBadge1DataUrl} alt="Custom Badge 1" className="w-full h-full object-cover p-2" />
                                             )
                                         ) : (
-                                            // Default Candle SVG Icon
+                                            // Default Candle SVG Icon - Ensured fill is currentColor and explicitly colored
                                             <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
                                                 width="142.000000pt" height="142.000000pt" viewBox="0 0 142.000000 142.000000"
-                                                preserveAspectRatio="xMidYMid meet" className="w-full h-full p-4 text-white">
+                                                preserveAspectRatio="xMidYMid meet" className="w-full h-full p-4" fill="currentColor" style={{ color: labelColor }}>
                                                 <g transform="translate(0.000000,142.000000) scale(0.100000,-0.100000)"
-                                                fill="currentColor" stroke="none">
+                                                stroke="none">
                                                 <path d="M665 1385 c-16 -9 -41 -22 -55 -31 -18 -11 -40 -13 -83 -8 -71 8
                                                 -110 -7 -137 -51 -25 -41 -54 -60 -104 -69 -44 -8 -96 -54 -96 -84 0 -41 -31
                                                 -92 -70 -117 -51 -32 -63 -64 -55 -137 6 -51 4 -63 -19 -102 -34 -59 -34 -113
@@ -719,7 +721,7 @@
                                     </div>
 
                                     {/* Badge 2 */}
-                                    <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl aspect-square overflow-hidden">
+                                    <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl aspect-square overflow-hidden" style={{ backgroundColor: 'rgba(255,255,255,0.1)' }}>
                                         {customBadge2DataUrl ? (
                                             customBadge2DataUrl.startsWith('data:image/svg+xml') ? (
                                                 <div className="w-full h-full text-white p-4" dangerouslySetInnerHTML={{ __html: customBadge2DataUrl }} />
@@ -727,12 +729,12 @@
                                                 <img src={customBadge2DataUrl} alt="Custom Badge 2" className="w-full h-full object-cover p-2" />
                                             )
                                         ) : (
-                                            // Default Crucifix SVG Icon
+                                            // Default Crucifix SVG Icon - Ensured fill is currentColor and explicitly colored
                                             <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
                                                 width="142.000000pt" height="142.000000pt" viewBox="0 0 142.000000 142.000000"
-                                                preserveAspectRatio="xMidYMid meet" className="w-full h-full p-4 text-white">
+                                                preserveAspectRatio="xMidYMid meet" className="w-full h-full p-4" fill="currentColor" style={{ color: labelColor }}>
                                                 <g transform="translate(0.000000,142.000000) scale(0.100000,-0.100000)"
-                                                fill="currentColor" stroke="none">
+                                                stroke="none">
                                                 <path d="M655 1384 c-85 -47 -84 -47 -131 -35 -58 15 -97 -1 -147 -62 -28 -35
                                                 -47 -48 -75 -53 -75 -13 -122 -60 -122 -121 0 -18 -17 -42 -60 -83 l-61 -58 3
                                                 -79 c3 -68 0 -82 -20 -110 -38 -53 -39 -91 -4 -157 28 -52 30 -62 25 -124 -5
