--- a/index.html
+++ b/index.html
@@ -324,13 +324,17 @@
             // Function to clear custom badge 1
             const clearBadge1 = () => {
                 setCustomBadge1DataUrl(null);
-                if (badge1FileInputRef.current) badge1FileInputRef.current.value = '';
+                if (badge1FileInputRef.current) {
+                    badge1FileInputRef.current.value = '';
+                }
             };
 
             // Function to clear custom badge 2
             const clearBadge2 = () => {
                 setCustomBadge2DataUrl(null);
-                if (badge2FileInputRef.current) badge2FileInputRef.current.value = '';
+                if (badge2FileInputRef.current) {
+                    badge2FileInputRef.current.value = '';
+                }
             };
 
             // Handle equipment checkbox changes (max 3)
@@ -684,38 +688,21 @@
                                         style={{
                                             backgroundColor: 'rgba(255,255,255,0.1)',
                                             backgroundImage: customBadge1DataUrl && !customBadge1DataUrl.startsWith('data:image/svg+xml') ? `url(${customBadge1DataUrl})` : 'none',
-                                            backgroundSize: 'contain', /* Use contain for badges to ensure whole icon is visible */
+                                            backgroundSize: 'cover', /* Changed to cover for raster images */
                                             backgroundPosition: 'center',
                                             backgroundRepeat: 'no-repeat'
                                         }}>
                                         {customBadge1DataUrl && customBadge1DataUrl.startsWith('data:image/svg+xml') ? (
-                                            <div className="w-full h-full text-white p-4" dangerouslySetInnerHTML={{ __html: customBadge1DataUrl }} />
+                                            <div className="w-full h-full text-white" dangerouslySetInnerHTML={{ __html: customBadge1DataUrl }} />
                                         ) : (
                                             !customBadge1DataUrl && ( // Default Candle SVG Icon if no custom image
                                                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
                                                     width="142.000000pt" height="142.000000pt" viewBox="0 0 142.000000 142.000000"
-                                                    preserveAspectRatio="xMidYMid meet" className="w-full h-full p-4" fill="currentColor" style={{ color: labelColor }}>
+                                                    preserveAspectRatio="xMidYMid meet" className="w-full h-full" fill="currentColor" style={{ color: labelColor }}>
                                                     <g transform="translate(0.000000,142.000000) scale(0.100000,-0.100000)"
                                                     stroke="none">
-                                                    <path d="M665 1385 c-16 -9 -41 -22 -55 -31 -18 -11 -40 -13 -83 -8 -71 8
-                                                    -110 -7 -137 -51 -25 -41 -54 -60 -104 -69 -44 -8 -96 -54 -96 -84 0 -41 -31
-                                                    -92 -70 -117 -51 -32 -63 -64 -55 -137 6 -51 4 -63 -19 -102 -34 -59 -34 -113
-                                                    0 -163 23 -34 25 -44 20 -99 -8 -77 3 -107 53 -141 41 -29 71 -78 71 -116 0
-                                                    -31 48 -75 90 -83 59 -11 81 -26 113 -77 28 -43 77 -60 131 -46 37 9 50 8 75
-                                                    -5 17 -9 45 -23 61 -32 34 -18 101 -12 120 11 20 24 76 37 114 26 56 -15 101
-                                                    2 133 50 29 44 59 63 115 73 40 7 75 42 84 85 10 51 34 91 65 110 52 32 63 56
-                                                    61 138 -2 63 1 80 23 117 32 54 32 86 0 140 -22 37 -25 54 -23 117 2 77 -11
-                                                    114 -44 125 -27 8 -78 73 -78 99 0 57 -61 115 -121 115 -13 0 -43 23 -79 60
-                                                    l-57 60 -79 -3 c-68 -2 -83 1 -111 21 -42 30 -81 35 -118 17z m247 -108 c200
-                                                    -73 350 -246 392 -449 20 -97 20 -149 0 -246 -43 -212 -199 -387 -409 -458
-                                                    -67 -22 -97 -27 -185 -27 -174 0 -308 55 -430 176 -114 112 -169 237 -178 400
-                                                    -9 183 46 326 178 458 80 81 179 139 282 165 85 22 267 12 350 -19z"/>
-                                                    <path d="M565 1276 c-188 -46 -350 -195 -415 -379 -31 -87 -38 -249 -15 -337
-                                                    51 -197 203 -358 400 -421 90 -29 240 -31 330 -5 212 63 371 230 419 443 69
-                                                    306 -123 618 -431 698 -68 18 -218 18 -288 1z m253 -40 c183 -40 345 -183 407
-                                                    -361 23 -66 31 -212 15 -284 -21 -99 -75 -197 -149 -271 -207 -207 -531 -215
-                                                    -746 -18 -121 110 -180 243 -179 403 1 153 50 269 159 381 133 134 312 189
-                                                    493 150z"/>
+                                                    <path d="M665 1385 c-16 -9 -41 -22 -55 -31 -18 -11 -40 -13 -83 -8 -71 8 -110 -7 -137 -51 -25 -41 -54 -60 -104 -69 -44 -8 -96 -54 -96 -84 0 -41 -31 -92 -70 -117 -51 -32 -63 -64 -55 -137 6 -51 4 -63 -19 -102 -34 -59 -34 -113 0 -163 23 -34 25 -44 20 -99 -8 -77 3 -107 53 -141 41 -29 71 -78 71 -116 0 -31 48 -75 90 -83 59 -11 81 -26 113 -77 28 -43 77 -60 131 -46 37 9 50 8 75 -5 17 -9 45 -23 61 -32 34 -18 101 -12 120 11 20 24 76 37 114 26 56 -15 101 2 133 50 29 44 59 63 115 73 40 7 75 42 84 85 10 51 34 91 65 110 52 32 63 56 61 138 -2 63 1 80 23 117 32 54 32 86 0 140 -22 37 -25 54 -23 117 2 77 -11 114 -44 125 -27 8 -78 73 -78 99 0 57 -61 115 -121 115 -13 0 -43 23 -79 60 l-57 60 -79 -3 c-68 -2 -83 1 -111 21 -42 30 -81 35 -118 17z m247 -108 c200 -73 350 -246 392 -449 20 -97 20 -149 0 -246 -43 -212 -199 -387 -409 -458 -67 -22 -97 -27 -185 -27 -174 0 -308 55 -430 176 -114 112 -169 237 -178 400 -9 183 46 326 178 458 80 81 179 139 282 165 85 22 267 12 350 -19z"/>
+                                                    <path d="M565 1276 c-188 -46 -350 -195 -415 -379 -31 -87 -38 -249 -15 -337 51 -197 203 -358 400 -421 90 -29 240 -31 330 -5 212 63 371 230 419 443 69 306 -123 618 -431 698 -68 18 -218 18 -288 1z m253 -40 c183 -40 345 -183 407 -361 23 -66 31 -212 15 -284 -21 -99 -75 -197 -149 -271 -207 -207 -531 -215 -746 -18 -121 110 -180 243 -179 403 1 153 50 269 159 381 133 134 312 189 493 150z"/>
                                                     </g>
                                                 </svg>
                                             )
@@ -727,53 +714,21 @@
                                         style={{
                                             backgroundColor: 'rgba(255,255,255,0.1)',
                                             backgroundImage: customBadge2DataUrl && !customBadge2DataUrl.startsWith('data:image/svg+xml') ? `url(${customBadge2DataUrl})` : 'none',
-                                            backgroundSize: 'contain', /* Use contain for badges to ensure whole icon is visible */
+                                            backgroundSize: 'cover', /* Changed to cover for raster images */
                                             backgroundPosition: 'center',
                                             backgroundRepeat: 'no-repeat'
                                         }}>
                                         {customBadge2DataUrl && customBadge2DataUrl.startsWith('data:image/svg+xml') ? (
-                                            <div className="w-full h-full text-white p-4" dangerouslySetInnerHTML={{ __html: customBadge2DataUrl }} />
+                                            <div className="w-full h-full text-white" dangerouslySetInnerHTML={{ __html: customBadge2DataUrl }} />
                                         ) : (
                                             !customBadge2DataUrl && ( // Default Crucifix SVG Icon if no custom image
                                                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
                                                     width="142.000000pt" height="142.000000pt" viewBox="0 0 142.000000 142.000000"
-                                                    preserveAspectRatio="xMidYMid meet" className="w-full h-full p-4" fill="currentColor" style={{ color: labelColor }}>
+                                                    preserveAspectRatio="xMidYMid meet" className="w-full h-full" fill="currentColor" style={{ color: labelColor }}>
                                                     <g transform="translate(0.000000,142.000000) scale(0.100000,-0.100000)"
                                                     stroke="none">
-                                                    <path d="M655 1384 c-85 -47 -84 -47 -131 -35 -58 15 -97 -1 -147 -62 -28 -35
-                                                    -47 -48 -75 -53 -75 -13 -122 -60 -122 -121 0 -18 -17 -42 -60 -83 l-61 -58 3
-                                                    -79 c3 -68 0 -82 -20 -110 -38 -53 -39 -91 -4 -157 28 -52 30 -62 25 -124 -5
-                                                    -67 -5 -69 27 -98 75 -68 90 -87 90 -113 0 -34 34 -89 62 -100 13 -4 43 -15
-                                                    68 -22 32 -10 51 -24 70 -53 39 -57 63 -67 141 -60 60 6 71 4 111 -20 57 -33
-                                                    98 -33 154 0 40 24 52 26 104 20 72 -8 100 4 153 68 31 37 46 47 80 53 48 7
-                                                    107 58 107 93 0 34 18 62 73 112 l52 46 -2 78 c-2 67 1 84 22 120 33 57 33
-                                                    110 -1 155 -24 31 -25 39 -19 101 7 80 -7 115 -60 148 -39 24 -65 66 -65 104
-                                                    0 37 -45 84 -88 92 -56 10 -87 30 -111 69 -29 50 -80 71 -136 55 -43 -12 -63
-                                                    -7 -135 35 -33 19 -68 19 -105 -1z m81 -39 c18 -13 15 -14 -28 -15 -53 0 -60
-                                                    6 -25 20 30 12 31 12 53 -5z m-226 -40 c0 -4 -67 -35 -77 -35 -2 0 1 9 7 20 7
-                                                    13 21 20 40 20 17 0 30 -2 30 -5z m461 -5 c10 -6 19 -15 19 -20 0 -13 -8 -9 -35
-                                                    17 -19 19 -35 38 -35 42 0 15 21 8 45 -17z m-139 -21 c123 -26 265 -115
-                                                    337 -212 187 -250 167 -562 -49 -777 -120 -120 -252 -174 -420 -173 -241 2
-                                                    -450 148 -542 378 -30 76 -32 87 -32 210 0 120 2 135 28 200 77 188 231 325
-                                                    414 370 71 17 194 19 264 4z m333 -114 c14 -13 25 -32 25 -42 0 -13 -8 -9 -35
-                                                    17 -19 19 -35 38 -35 42 0 15 21 8 45 -17z m-900 -15 c-17 -17 -31 -26 -33
-                                                    -20 -5 15 27 50 46 50 11 0 7 -9 -13 -30z m-132 -200 c-17 -43 -33 -53 -33
-                                                    -20 0 17 32 60 44 60 3 0 -3 -18 -11 -40z m1177 -1 c13 -30 7 -51 -9 -33 -4 5
-                                                    -13 23 -19 41 -8 26 -8 31 3 27 7 -3 19 -19 25 -35z m-1230 -250 c0 -54 -14
-                                                    -59 -25 -8 -6 25 6 59 21 59 2 0 4 -23 4 -51z m1280 -1 c0 -16 -4 -28 -10 -28
-                                                    -5 0 -10 19 -10 43 0 31 3 38 10 27 5 -8 10 -27 10 -42z m-40 -223 c0 -17 -49
-                                                    -75 -50 -58 0 7 7 28 17 47 16 34 33 40 33 11z m-1190 -15 c7 -17 10 -33 8
-                                                    -36 -9 -9 -38 27 -38 47 0 29 16 23 30 -11z m145 -228 c-22 -5 -45 16 -45 41
-                                                    0 19 2 18 31 -9 24 -23 27 -30 14 -32z m899 21 c-22 -29 -44 -41 -44 -23 0 14
-                                                    51 62 58 55 3 -3 -3 -17 -14 -32z m-701 -130 c9 -3 17 -9 17 -14 0 -15 -37
-                                                    -10 -54 7 -21 20 -20 28 2 19 9 -4 25 -10 35 -12z m517 8 c0 -12 -40 -41 -57
-                                                    -41 -22 0 -14 19 15 34 32 18 42 19 42 7z m-242 -63 c-6 -16 -32 -22 -64 -14
-                                                    -40 10 -27 26 22 26 32 0 44 -4 42 -12z"/>
-                                                    <path d="M572 1230 c-104 -27 -167 -64 -247 -145 -82 -82 -118 -144 -145 -251
-                                                    -23 -89 -25 -154 -6 -239 65 -306 360 -491 665 -420 186 44 347 203 395 391
-                                                    47 184 -7 387 -138 518 -140 140 -337 195 -524 146z m248 -31 c173 -40 331
-                                                    -192 376 -363 22 -83 18 -219 -10 -297 -126 -358 -592 -457 -849 -180 -116
-                                                    126 -163 306 -122 466 47 178 196 327 370 370 63 16 176 18 235 4z"/>
+                                                    <path d="M655 1384 c-85 -47 -84 -47 -131 -35 -58 15 -97 -1 -147 -62 -28 -35 -47 -48 -75 -53 -75 -13 -122 -60 -122 -121 0 -18 -17 -42 -60 -83 l-61 -58 3 -79 c3 -68 0 -82 -20 -110 -38 -53 -39 -91 -4 -157 28 -52 30 -62 25 -124 -5 -67 -5 -69 27 -98 75 -68 90 -87 90 -113 0 -34 34 -89 62 -100 13 -4 43 -15 68 -22 32 -10 51 -24 70 -53 39 -57 63 -67 141 -60 60 6 71 4 111 -20 57 -33 98 -33 154 0 40 24 52 26 104 20 72 -8 100 4 153 68 31 37 46 47 80 53 48 7 107 58 107 93 0 34 18 62 73 112 l52 46 -2 78 c-2 67 1 84 22 120 33 57 33 110 -1 155 -24 31 -25 39 -19 101 7 80 -7 115 -60 148 -39 24 -65 66 -65 104 0 37 -45 84 -88 92 -56 10 -87 30 -111 69 -29 50 -80 71 -136 55 -43 -12 -63 -7 -135 35 -33 19 -68 19 -105 -1z m81 -39 c18 -13 15 -14 -28 -15 -53 0 -60 6 -25 20 30 12 31 12 53 -5z m-226 -40 c0 -4 -67 -35 -77 -35 -2 0 1 9 7 20 7 13 21 20 40 20 17 0 30 -2 30 -5z m461 -5 c10 -6 19 -15 19 -20 0 -13 -8 -9 -35 17 -19 19 -35 38 -35 42 0 15 21 8 45 -17z m-139 -21 c123 -26 265 -115 337 -212 187 -250 167 -562 -49 -777 -120 -120 -252 -174 -420 -173 -241 2 -450 148 -542 378 -30 76 -32 87 -32 210 0 120 2 135 28 200 77 188 231 325 414 370 71 17 194 19 264 4z m333 -114 c14 -13 25 -32 25 -42 0 -13 -8 -9 -35 17 -19 19 -35 38 -35 42 0 15 21 8 45 -17z m-900 -15 c-17 -17 -31 -26 -33 -20 -5 15 27 50 46 50 11 0 7 -9 -13 -30z m-132 -200 c-17 -43 -33 -53 -33 -20 0 17 32 60 44 60 3 0 -3 -18 -11 -40z m1177 -1 c13 -30 7 -51 -9 -33 -4 5 -13 23 -19 41 -8 26 -8 31 3 27 7 -3 19 -19 25 -35z m-1230 -250 c0 -54 -14 -59 -25 -8 -6 25 6 59 21 59 2 0 4 -23 4 -51z m1280 -1 c0 -16 -4 -28 -10 -28 -5 0 -10 19 -10 43 0 31 3 38 10 27 5 -8 10 -27 10 -42z m-40 -223 c0 -17 -49 -75 -50 -58 0 7 7 28 17 47 16 34 33 40 33 11z m-1190 -15 c7 -17 10 -33 8 -36 -9 -9 -38 27 -38 47 0 29 16 23 30 -11z m145 -228 c-22 -5 -45 16 -45 41 0 19 2 18 31 -9 24 -23 27 -30 14 -32z m899 21 c-22 -29 -44 -41 -44 -23 0 14 51 62 58 55 3 -3 -3 -17 -14 -32z m-701 -130 c9 -3 17 -9 17 -14 0 -15 -37 -10 -54 7 -21 20 -20 28 2 19 9 -4 25 -10 35 -12z m517 8 c0 -12 -40 -41 -57 -41 -22 0 -14 19 15 34 32 18 42 19 42 7z m-242 -63 c-6 -16 -32 -22 -64 -14 -40 10 -27 26 22 26 32 0 44 -4 42 -12z"/>
+                                                    <path d="M572 1230 c-104 -27 -167 -64 -247 -145 -82 -82 -118 -144 -145 -251 -23 -89 -25 -154 -6 -239 65 -306 360 -491 665 -420 186 44 347 203 395 391 47 184 -7 387 -138 518 -140 140 -337 195 -524 146z m248 -31 c173 -40 331 -192 376 -363 22 -83 18 -219 -10 -297 -126 -358 -592 -457 -849 -180 -116 126 -163 306 -122 466 47 178 196 327 370 370 63 16 176 18 235 4z"/>
                                                     </g>
                                                 </svg>
                                             )
