--- a/index.html
+++ b/index.html
@@ -686,6 +686,8 @@
                                     {/* Badge 1 */}
                                     <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl aspect-square overflow-hidden"
                                         style={{
+                                            width: '112px', /* Explicitly set width */
+                                            height: '112px', /* Explicitly set height */
                                             backgroundColor: 'rgba(255,255,255,0.1)',
                                             backgroundImage: customBadge1DataUrl && !customBadge1DataUrl.startsWith('data:image/svg+xml') ? `url(${customBadge1DataUrl})` : 'none',
                                             backgroundSize: 'cover', /* Changed to cover for raster images */
@@ -712,6 +714,8 @@
                                     {/* Badge 2 */}
                                     <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl aspect-square overflow-hidden"
                                         style={{
+                                            width: '112px', /* Explicitly set width */
+                                            height: '112px', /* Explicitly set height */
                                             backgroundColor: 'rgba(255,255,255,0.1)',
                                             backgroundImage: customBadge2DataUrl && !customBadge2DataUrl.startsWith('data:image/svg+xml') ? `url(${customBadge2DataUrl})` : 'none',
                                             backgroundSize: 'cover', /* Changed to cover for raster images */
