--- a/index.html
+++ b/index.html
@@ -516,8 +516,9 @@
                                 </div>
                             </div>
 
-                            {/* Custom Badge 1 Upload */}
+                            {/* Custom Badge Uploads Section - Now with 2 badges */}
                             <div className="col-span-full grid grid-cols-1 md:grid-cols-2 gap-4">
+                                {/* Custom Badge 1 Upload */}
                                 <div className="min-w-0">
                                     <label htmlFor="badge1Upload" className="block text-sm font-medium text-gray-300 mb-1">Upload Badge 1 (SVG, PNG, JPEG)</label>
                                     <p className="text-xs text-gray-400 mb-2">
@@ -684,7 +685,7 @@
                                 {/* Column 3: Badges */}
                                 <div className="flex flex-row items-center justify-center gap-8"> {/* Changed to flex-row for horizontal stacking, centered */}
                                     {/* Badge 1 */}
-                                    <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl aspect-square overflow-hidden"
+                                    <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl overflow-hidden flex-shrink-0"
                                         style={{
                                             width: '112px', /* Explicitly set width */
                                             height: '112px', /* Explicitly set height */
@@ -715,7 +716,7 @@
                                     </div>
 
                                     {/* Badge 2 */}
-                                    <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl aspect-square overflow-hidden"
+                                    <div className="w-28 h-28 rounded-full flex items-center justify-center shadow-xl overflow-hidden flex-shrink-0"
                                         style={{
                                             width: '112px', /* Explicitly set width */
                                             height: '112px', /* Explicitly set height */
